force-app/main/default/objects/Invitee__c/Invitee__c.object-meta.xml
<CustomObject>
    <label>Invitee</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Invitee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>