force-app/main/default/objects/Invitee__c/fields/Contact_Company__c.field-meta.xml
<CustomField>
    <fullName>Contact_Company__c</fullName>
    <formula>Contact_Invitees__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Company</label>
    <type>Text</type>
</CustomField>