force-app/main/default/objects/Invitee__c/fields/Contact_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_ID__c</fullName>
    <formula>Contact_Invitees__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email ID</label>
    <type>Text</type>
</CustomField>