force-app/main/default/objects/Invitee__c/fields/Contact_Invitees__c.field-meta.xml
<CustomField>
    <fullName>Contact_Invitees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Invitees</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invitees</relationshipLabel>
    <relationshipName>Invitees</relationshipName>
    <type>Lookup</type>
</CustomField>