force-app/main/default/objects/Invitee__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <formula>LeadInvitee__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email ID</label>
    <type>Text</type>
</CustomField>