force-app/main/default/objects/Invitee__c/fields/LeadInvitee__c.field-meta.xml
<CustomField>
    <fullName>LeadInvitee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Invitee</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LeadInvitees</relationshipLabel>
    <relationshipName>LeadInvitees</relationshipName>
    <type>Lookup</type>
</CustomField>